--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 @import url('colores.css');
 @import url('navbar.css');
 @import url('sidebar.css');
+@import url('size.css');
 /*reset*/
 *{
     margin: 0;
@@ -23,6 +24,8 @@
 .boton-r{
     padding: .5em;
     border-radius: 5px;
+    border: none;
+    cursor: pointer;
 }
 
 /*cards*/
@@ -49,10 +52,9 @@
     margin-top: 100px;
     display: grid;
     grid-template-columns: 1fr;
-    border: solid;
     padding: 1em;
 }
-.formulario input{
+.formulario input[type=text]{
     margin: .3em;
     padding: .5em;
     border: none;
